; ModuleID = '/home/carl/AnghaBench/libui/common/extr_attrlist.c_attrHasPos.c'
source_filename = "/home/carl/AnghaBench/libui/common/extr_attrlist.c_attrHasPos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attr = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.attr*, i64)* @attrHasPos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @attrHasPos(%struct.attr* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.attr*, align 8
  %5 = alloca i64, align 8
  store %struct.attr* %0, %struct.attr** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.attr*, %struct.attr** %4, align 8
  %8 = getelementptr inbounds %struct.attr, %struct.attr* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ult i64 %6, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %19

12:                                               ; preds = %2
  %13 = load i64, i64* %5, align 8
  %14 = load %struct.attr*, %struct.attr** %4, align 8
  %15 = getelementptr inbounds %struct.attr, %struct.attr* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ult i64 %13, %16
  %18 = zext i1 %17 to i32
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %12, %11
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
